--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.0.1",
+    "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.9.1",
     "cssnano": "^3.4.0",
     "del": "^1.1.1",
@@ -11,7 +17,6 @@
     "gulp-usemin": "^0.3.11",
     "jade": "^1.9.1",
     "jsx-loader": "^0.12.2",
-    "less-loader": "^2.0.0",
     "milligram": "^1.0.3",
     "milligram-postcss": "0.0.1",
     "node-sass": "^3.4.2",
@@ -28,7 +33,7 @@
     "webpack-dev-server": "^1.7.0"
   },
   "dependencies": {
-    "react": "^0.12.2",
-    "react-dom": "^0.14.7"
+    "react": "0.14.6",
+    "react-dom": "0.14.6"
   }
 }
