--- a/package.json
+++ b/package.json
@@ -11,12 +11,22 @@
     "del": "^1.1.1",
     "expose-loader": "^0.7.1",
     "gulp": "^3.8.10",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jade": "^1.1.0",
     "gulp-less": "^3.0.5",
+    "gulp-load-plugins": "^1.2.0",
     "gulp-rev": "^3.0.0",
     "gulp-uglify": "^1.1.0",
     "gulp-usemin": "^0.3.11",
+    "gulp-util": "^3.0.7",
+    "gulp.spritesmith": "^6.0.0",
+    "imagemin-pngquant": "^4.2.0",
     "jade": "^1.9.1",
+    "chunk-manifest-webpack-plugin": "0.0.1",
+    "clean-webpack-plugin": "^0.1.7",
+    "extract-text-webpack-plugin": "^1.0.1",
     "jsx-loader": "^0.12.2",
+    "merge2": "^1.0.0",
     "milligram": "^1.0.3",
     "milligram-postcss": "0.0.1",
     "node-sass": "^3.4.2",
