--- a/package.json
+++ b/package.json
@@ -6,25 +6,25 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.1",
     "babel-preset-stage-0": "^6.3.13",
+    "chunk-manifest-webpack-plugin": "0.0.1",
+    "clean-css": "^3.4.9",
     "css-loader": "^0.9.1",
     "cssnano": "^3.4.0",
     "del": "^1.1.1",
     "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.8.10",
     "gulp-imagemin": "^2.4.0",
     "gulp-jade": "^1.1.0",
-    "gulp-less": "^3.0.5",
     "gulp-load-plugins": "^1.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-rev": "^3.0.0",
     "gulp-uglify": "^1.1.0",
     "gulp-usemin": "^0.3.11",
     "gulp-util": "^3.0.7",
     "gulp.spritesmith": "^6.0.0",
     "imagemin-pngquant": "^4.2.0",
-    "jade": "^1.9.1",
-    "chunk-manifest-webpack-plugin": "0.0.1",
-    "clean-webpack-plugin": "^0.1.7",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "jshint": "^2.8.0",
     "jsx-loader": "^0.12.2",
     "merge2": "^1.0.0",
     "milligram": "^1.0.3",
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "react": "0.14.6",
-    "react-dom": "0.14.6"
+    "react-dom": "0.14.6",
+    "node-sass": "^3.4.2"
   }
 }
