--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "postcss-loader": "^0.8.0",
     "postcss-simple-vars": "^1.2.0",
     "precss": "^1.4.0",
+    "run-sequence": "^1.1.5",
     "react": "^0.12.2",
     "react-hot-loader": "^1.1.4",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.8.3",
     "webpack": "^1.5.3",
-    "webpack-dev-server": "^1.7.0"
+    "webpack-dev-server": "^1.7.0",
+    "yargs": "^3.32.0"
   },
   "dependencies": {
     "react": "0.14.6",
